# cortex-m-rtic

./: Cargo.toml
macros/: Cargo.toml
macros/src/: codegen.rs  lib.rs  modality_probe.rs
macros/src/codegen/: dispatchers.rs  hardware_tasks.rs  idle.rs  init.rs  local_resources.rs  local_resources_struct.rs  module.rs  post_init.rs  tracing.rs  util.rs
macros/src/modality_probe/: id_gen.rs  manifest_gen.rs
