[package]
authors = [
  "The Real-Time Interrupt-driven Concurrency developers",
  "Jorge Aparicio <jorge@japaric.io>",
]
categories = ["concurrency", "embedded", "no-std"]
description = "Procedural macros of the cortex-m-rtic crate"
documentation = "https://rtic-rs.github.io/cortex-m-rtic/api/cortex_m_rtic"
edition = "2018"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
name = "cortex-m-rtic-macros"
readme = "../README.md"
repository = "https://github.com/rtic-rs/cortex-m-rtic"
version = "0.6.0-rc.2"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-error = "1"
quote = "1"
syn = "1"
csv = "1.1"
toml = "0.5"
sha3 = "0.9"
rtic-syntax = { path = "../../rtic-syntax" }
#rtic-syntax = "0.5.0-rc.1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.modality-probe]
git = "https://github.com/auxoncorp/modality-probe.git"
branch = "master"
version = "0.4.0"
default-features = false
